--- a/seminario.bib
+++ b/seminario.bib
@@ -128,6 +128,17 @@ pages={1282},
   publisher={IOP Publishing}
 }
 
+@article{tanaka2002three,
+  title={Three-dimensional interaction between a planet and an isothermal gaseous disk. I. Corotation and Lindblad torques and planet migration},
+  author={Tanaka, Hidekazu and Takeuchi, Taku and Ward, William R},
+  journal={The Astrophysical Journal},
+  volume={565},
+  number={2},
+  pages={1257},
+  year={2002},
+  publisher={IOP Publishing}
+}
+
 @article{mordasini2018planetary,
   title={Planetary population synthesis},
   author={Mordasini, Christoph},
