--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -695,7 +695,10 @@ per disco isotermo infinitamente sottile.
 
 \subsection{Momento torcente generato nella regione di corotazione.}
 
-
+\begin{wrapfigure}[10]{lr}{0.\textwidth}
+\includegraphics[trim={0cm 0 0 0},clip, width=0.\textwidth]{newfig}\label{fig:newfig}
+\caption{Da \cite{}.}
+\end{wrapfigure}
 
 La regione di corotazione \'e definita da $\Omega(r)-\Omega_p=0$ cio\'e il potenziale del pianeta ruota alla stessa frequenza del fluido.
 \begin{equation}
