--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -697,7 +697,7 @@ per disco isotermo infinitamente sottile.
 
 \begin{wrapfigure}[10]{lr}{0.\textwidth}
 \includegraphics[trim={0cm 0 0 0},clip, width=0.\textwidth]{newfig}\label{fig:newfig}
-\caption{Da \cite{}.}
+\caption{Da \cite{armitage2007lecture}.}
 \end{wrapfigure}
 
 La regione di corotazione \'e definita da $\Omega(r)-\Omega_p=0$ cio\'e il potenziale del pianeta ruota alla stessa frequenza del fluido.
