--- a/seminario.bib
+++ b/seminario.bib
@@ -128,6 +128,13 @@ pages={1282},
   publisher={IOP Publishing}
 }
 
+@article{armitage2007lecture,
+  title={Lecture notes on the formation and early evolution of planetary systems},
+  author={Armitage, Philip J},
+  journal={arXiv preprint astro-ph/0701485},
+  year={2007}
+}
+
 @article{tanaka2002three,
   title={Three-dimensional interaction between a planet and an isothermal gaseous disk. I. Corotation and Lindblad torques and planet migration},
   author={Tanaka, Hidekazu and Takeuchi, Taku and Ward, William R},
