--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -695,6 +695,11 @@ per disco isotermo infinitamente sottile.
 
 \subsection{Momento torcente generato nella regione di corotazione.}
 
+\begin{workout}[horseshoe drag: streamline, nonlinear. corotation torque: linear]
+paardekooper papaloizou 09: '' On corotation torque, horseshoe drag and the possibility of sustrained stalled or outward protoplanetary migration''.
+masset 06: ''On the migration of protogiant solid cores''
+\end{workout}
+
 \begin{wrapfigure}[10]{lr}{0.\textwidth}
 \includegraphics[trim={0cm 0 0 0},clip, width=0.\textwidth]{newfig}\label{fig:newfig}
 \caption{Da \cite{armitage2007lecture}.}
