--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -560,7 +560,7 @@ fonti energia: tidal heating radiogeninc heat, star flux
 \chapter{Interazioni pianeta-disco: migrazione planetaria}
 }
 
-Considero in maniera schematica lo scambio di momento angolare tra pianeta e disco usando l'approssimazione impulsiva, dove si considera la traiettora di un elemento di fluido che interagisce col pianeta, oppure descrivendo l'interazione tra onde di densit\'a e pianeta.
+Considero in maniera schematica lo scambio di momento angolare tra pianeta e disco usando l'approssimazione impulsiva, dove si considera la traiettora di un elemento di fluido che interagisce col pianeta e integrando sui parametri d'impatto ammissibili, oppure descrivendo in approssimazione lineare l'interazione tra onde di densit\'a e pianeta.
 
 \begin{workout}[Migration refs]
 Terquem papaloizou (planet formation and migration) pg 43
@@ -652,33 +652,45 @@ Veras armitage 04 (exoplanets with $a>20au$): outward migration seldom important
 
 \section{Migrazione tipo I: pianeti piccola massa - comportamento lineare.}
 
-\subsection{Momento torcente a risonanze di Lindblad}
-
-Prendo un disco kepleriano ed espando il potenziale generato dal pianeta, periodico in $\phi_p=\Omega_pt$:
+\subsection{Risonanze di Lindblad}
+%chapter 6 (gemelli.spacescience)
+Considero un disco kepleriano ed espando il potenziale generato da un pianeta, periodico in $\phi_p=\Omega_pt$:
 \begin{align}
 &\psi_p(r,\phi,t)=-\frac{Gm_p}{|\vec{r}_p(t)-\vec{r}|}=\sum_{m=0}^{\infty}\psi_m(r)\cos{m[\phi-\phi_p(t)]}
 \end{align}
+Attornoall'orbita del pianeta si hanno orbite risonanti per elementi di fluido del gas. La condizione di risonanza \'e
+\begin{align}
+\pm\kappa_0=m(\Omega-\Omega_p)\\
+%\kappa_0^2=\frac{2\Omega}{r}\TDof{r}(r^2\Omega)
+\end{align}
+dove $\kappa_0=\Omega$ per disco Kepleriano \'e frequenza epiciclica.
+Le risonanze di Lindblad si hanno a:
+\begin{equation}
+r_L=(\frac{m}{m\pm1})\expy{2/3}a
+\end{equation}
+%%RMM disco pianeta: gli elementi di fluido descrivono m orbite attorno al pianeta il pianeta compie $m\pm1$ orbite
+
+Per tenere conto della pressione introduco l'altezza scala del disco $c_s=H\Omega$, quindi la posizione della risonanza \'e allontanata:
+\begin{equation}
+m[\Omega(r_L)-\Omega_p]=\mp\Omega(r_L)\sqrt{1+m^2(H/r)^2}
+\end{equation}
+
+Inoltre le risonanze rimangono a distanza finita dal pianeta:
+\begin{align}
+%&m(\Omega(r)-\Omega_p)=\sqrt{\kappa^2(r)(1+\xi^2)}\\
+&\lim_{m\to\infty}r_L=r_p+\frac{2H}{3}
+\end{align}
+%dove $\xi=\frac{mc_s}{\Omega r}$, $c_s=H\Omega$.
+
+\subsection{Momento torcente dovuto alle risonanze di Lindblad}
+
+
 Il momento torcente esercitato dal disco sul pianeta \'e
 \begin{equation}
 \Gamma_t=-\int_{disk}\Sigma(\vecp{r}{F})\,df=\int_{disk}\Sigma(\vec{r}\wedge\nabla\psi_p)\,df=\int_{disk}\Sigma\PDy{\phi}{\psi_p}\,df\label{eq:pd-torque}
 \end{equation}
 $\Sigma$ densit\'a superficiale,  $\vec{F}$ forza per unit\'a di massa, $df$ elemento di superficie.
 
-Dove la frequenza della componente m-esima del potenziale \'e uguale alla frequenza epiciclica (disco kepleriano: $\kappa_0=\Omega$) si ha una risonanza di Lindblad $\pm\Omega=m(\Omega(r)-\Omega_p)$, il raggio a cui si hanno \'e
-\begin{equation}
-r_L=(\frac{m}{m\pm1})\expy{2/3}a
-\end{equation}
-
-Alla posizione delle risonanze di Lindblad si generano onde la cui relazione di dispersione \'e modificata dalla pressione
-\begin{equation}
-\tilde{\omega}^2=\kappa^2+c_s^2k^2
-\end{equation}
-inoltre le risonanze rimangono a distanza finita dal pianeta:
-\begin{align}
-&m(\Omega(r)-\Omega_p)=\sqrt{\kappa^2(r)(1+\xi^2)}\\
-&\lim_{m\to\infty}r_L=r_p+\frac{2H}{3}
-\end{align}
-dove $\xi=\frac{mc_s}{\Omega r}$, $c_s=H\Omega$.
 
 %Linear. Occur if $R_H$ is smaller then H, disk scale heigth, and if viscous torque are dominant compared to gravitational torque.
 
@@ -692,6 +704,107 @@ con $q=M_p/M_*$, infine una stima del momento torcente differenziale delle rison
 \Gamma_L^d\propto q^2\Sigma r_p^4\Omega_p^2(\frac{H}{r})\expy{-2}
 \end{equation}
 per disco isotermo infinitamente sottile.
+
+\subsection{Velocit\'a migrazione tipo I}
+
+Utilizzando la stima di \cite{tanaka2002three} si trova il tempo caratteristico per migrazione tipo I
+
+\begin{equation}
+\tau_I=\frac{r_p}{|\dot{r}_p|}=\frac{\dot{J}_p}{\Gamma_{dL}}=\frac{1}{2.1+1.1\gamma}\frac{M_*}{M_p}\frac{M_*}{r_p^2\Sigma(r_p)}(\frac{c_s}{r_p\Omega_p})^2\frac{1}{\Omega_p}
+\end{equation}
+da cui risulta pr disco protoplanetario con $\Sigma(r)=1500(r\SI{5}{\astronomicalunit})\expy{-3/2}\si{\kilo\gram\per\square\meter}$ a $T=\SI{130}{\kelvin}$ per pianeta di massa terrestre a \SI{5}{\astronomicalunit} un tempo di migrazione $\tau_I\approx\SI{8e5}{\year}$: molto minore del tempo di vita del disco.
+
+Il momento torcente
+\begin{workout}[M14:type II and outward migration]
+Freuenza epiciclica
+\begin{equation}
+\kappa^2=4\Omega^2+r\TDy{r}{\Omega^2}
+\end{equation}
+\end{workout}
+
+
+\begin{workout}[Migration I in isothermal disk: pressure.]
+Low mass planet in isothermal disk: linear analysis of perturbed flow.
+When pressure can't be neglected the resonance condition becomes $m(\Omega(r)-\Omega_p=\sqrt{\kappa^2(r)(1+\xi^2)}$ where $\xi=\frac{mc_s}{\Omega r}$ where we used isothermal sound speed and let $c_s=H\Omega$: for $m\to\infty$ L. res position becomes $r_L=r_p+\frac{2H}{3}$ (torque cutoff).
+
+Linear. Occur if $R_H$ is smaller then H, disk scale heigth, and if viscous torque are dominant compared to gravitational torque.
+Subtypes: locally isothermal, adiabatic, un/satured-corotation torque: cooling behaviour of gas (Baruteau masset08, Casoli masset 08, paardekooper10,kley 09); timescales: dittkrist 14.
+Migration timescale in isothermal approx (ida lin 08 a:):
+\begin{align*}
+&\tau_I=\frac{1}{2.728+1.082p_{\Sigma}}(\frac{c_s}{a_p\Omega})^2\frac{M_*}{M_p}\frac{M_*}{a_p^2\Sigma_g}\Omega\expy{-1}\\
+s&\dot{a}_p=-\frac{a_p}{\tau_I}
+\end{align*}
+Paardekooper10, Dittkrist14: total torque $\Gamma_t=\frac{1}{\gamma}(C_0+C_1p_{\Sigma}+C_2p_T)\Gamma_0$ where $C_i$ depends upon sub-regime.
+Benitez Llambay 15: heating torque, Paardekooper14 Pierens 15: dynamic corotation torque.
+\end{workout}
+
+\section{Migrazione tipo II:pianeti massicci.}
+
+\subsection{Approssimazione impulsiva}
+%Lin papaloizou 79
+\begin{wrapfigure}[14]{l}{0.45\textwidth}
+\includegraphics[width=0.45\textwidth]{impulseapprox}\label{fig:impulseapprox}
+\caption{Schema approssimazione impulsiva. Da \cite{crida}.}
+\end{wrapfigure}
+
+In questa approssimazione, cio\'e incontro breve, posso trascurare il moto del pianeta attorno alla stella. La traiettoria di un elemento di fluido \'e deviata di un angolo
+\begin{equation}
+\beta=\arctan{\delta v/v}=\arctan{(\frac{GM_p}{bv_0^2})}
+\end{equation}
+$v_0$ velocit\'a relativa fluido-pianeta, b parametro d'impatto.
+
+Trasferimento di momento angolareper unit\'a di massa rispetto alla stella:
+\begin{align}
+&v=r(\Omega-\Omega_p)\\
+&\delta j=rv(\cos{\beta}-1)=-2r\frac{G^2M_p^2}{b^2v^3}
+\end{align}
+Il disco cede momento angolare al pianeta con rate
+\begin{equation}
+\frac{\delta j}{\delta t}=\frac{\delta j}{2\pi/|\Omega-\Omega_p|}
+\end{equation}
+
+Infine il momento torcente totale esercitato da pianeta sulla porzione esterna di disco \'e
+\begin{equation}
+\Gamma_{imp}==\int_{r_p+\Delta}^{\infty}\int_0^{2\pi}\frac{\delta j}{\delta t}\Sigma r\,d\theta\,dr\propto\Sigma q^2r_p^4\Omega_p^2\frac{r_p^3}{\Delta^3}
+\end{equation}
+
+Per materia in orbita circolare interna/esterna al pianeta il trasferimento \'e positivo/negativo: per disco esterno all'orbita l'espressione \'e la stessa con segno invertito perch\'e il disco or a \'e pi\'u lento del protopianeta.
+
+(The interaction is frictional with interior speeding up protoplanet while exterior slowing down; viscous interaction with disk return mass element in circular orbit)
+Il calcolo esatto che tiene conto del fatto che siamo in SR rotante (LP93) introduce fattore correttivo $K_0=4/9[2K_0(2/3)*K_1(2/3)]^2$.
+
+La velocit\'a relativa \'e $u=a|\Omega_p-\Omega_g$ e dato che l'interazione avviene vicino al pianeta $|\Omega_p-\Omega_g|\approx3/2b\Omega_p/a$.
+
+Rate trasferimento momento angolare tra interno del disco e pianeta
+\begin{equation}
+\TDy{t}{J}=\int_{b_{min}}^{+\infty}a\Sigma\Delta J|\Omega_p-\Omega_g|\,db
+\end{equation}
+
+
+
+Il parametro d'impatto minimo \'e l'assunzione implicita di un gap nel disco a assenza di materia nella regione di corotazione (discussione applicabilein regime non-lineare)
+Formazione gap: perch\'e il gap si stazionario il momento scambiato nell'interazione disco-pianeta deve essere almeno quello trasportato dal moto viscoso del disco:
+\begin{equation}
+\TDy{t}{J}|_{visc}=3\pi\nu\Sigma a^2\omega
+\end{equation}
+deve essere quindi $\TDy{t}{J}|_{visc}<\TDy{t}{J}$
+
+Cut-off: $b_{min}\approx H$, la pressione smorza effetti su scala pi\'u piccola; regime non-lneare, richiesto per gap formation, lunghezza-scala del flusso non minore di $r_H$: predndendo $b_m=2r_h$ si ha
+\begin{equation}
+\frac{M_p}{M_*}>\frac{40\nu}{a^2\omega}
+\end{equation}
+
+Formazione di gap per dischi tipici sopra massa di saturno.
+Migrazione tipo II: il pianeta prende momento dal disco esterno (dovuto al flusso viscoso) e cede quello richiesto al disco esterno dal trasporto viscoso: normalmente il bilancio \'e negativo quindi il pianeta migra verso l'interno.
+
+Quando la massa del pianeta non eccede la massa locale del disco il tempo scale di migrazione \'e
+\begin{equation}
+t_{II}(yr)=\frac{1}{3\alpha}(\frac{a}{H})^2\Omega\expy{-1}=0.05/\alpha(a/H)^2(a/au)\expy{3/2}
+\end{equation}
+per $H/a\approx0.1$, $\alpha=\numrange{e-3}{e-2}$ a $a=1-5 au$ si ha $t_{}=10^3-10^4yr$.
+
+
+\section{Migrazione III:}
 
 \subsection{Momento torcente generato nella regione di corotazione}
 
@@ -729,98 +842,6 @@ crida pg 39:
 Sia $b_0=r-r_p$ la distanza dal pianeta di un elemento di fluido in congiunzione
 $\tau\approx2\pi/|x_s\TDy{r}{\Omega}|=4\pi r_p/(3x_s\Omega_p)$
 
-\subsection{Velocit\'a migrazione tipo I}
-
-Utilizzando la stima di \cite{tanaka2002three} si trova il tempo caratteristico per migrazione tipo I
-
-\begin{equation}
-\tau_I=\frac{r_p}{|\dot{r}_p|}=\frac{\dot{J}_p}{\Gamma_{dL}}=\frac{1}{2.1+1.1\gamma}\frac{M_*}{M_p}\frac{M_*}{r_p^2\Sigma(r_p)}(\frac{c_s}{r_p\Omega_p})^2\frac{1}{\Omega_p}
-\end{equation}
-da cui risulta pr disco protoplanetario con $\Sigma(r)=1500(r\SI{5}{\astronomicalunit})\expy{-3/2}\si{\kilo\gram\per\square\meter}$ a $T=\SI{130}{\kelvin}$ per pianeta di massa terrestre a \SI{5}{\astronomicalunit} un tempo di migrazione $\tau_I\approx\SI{8e5}{\year}$: molto minore del tempo di vita del disco.
-
-Il momento torcente
-\begin{workout}[M14:type II and outward migration]
-Freuenza epiciclica
-\begin{equation}
-\kappa^2=4\Omega^2+r\TDy{r}{\Omega^2}
-\end{equation}
-\end{workout}
-
-
-\begin{workout}[Migration I in isothermal disk: pressure.]
-Low mass planet in isothermal disk: linear analysis of perturbed flow.
-When pressure can't be neglected the resonance condition becomes $m(\Omega(r)-\Omega_p=\sqrt{\kappa^2(r)(1+\xi^2)}$ where $\xi=\frac{mc_s}{\Omega r}$ where we used isothermal sound speed and let $c_s=H\Omega$: for $m\to\infty$ L. res position becomes $r_L=r_p+\frac{2H}{3}$ (torque cutoff).
-
-Linear. Occur if $R_H$ is smaller then H, disk scale heigth, and if viscous torque are dominant compared to gravitational torque.
-Subtypes: locally isothermal, adiabatic, un/satured-corotation torque: cooling behaviour of gas (Baruteau masset08, Casoli masset 08, paardekooper10,kley 09); timescales: dittkrist 14.
-Migration timescale in isothermal approx (ida lin 08 a:):
-\begin{align*}
-&\tau_I=\frac{1}{2.728+1.082p_{\Sigma}}(\frac{c_s}{a_p\Omega})^2\frac{M_*}{M_p}\frac{M_*}{a_p^2\Sigma_g}\Omega\expy{-1}\\
-s&\dot{a}_p=-\frac{a_p}{\tau_I}
-\end{align*}
-Paardekooper10, Dittkrist14: total torque $\Gamma_t=\frac{1}{\gamma}(C_0+C_1p_{\Sigma}+C_2p_T)\Gamma_0$ where $C_i$ depends upon sub-regime.
-Benitez Llambay 15: heating torque, Paardekooper14 Pierens 15: dynamic corotation torque.
-\end{workout}
-
-\section{Massive enough planet to open gap: migration II}
-
-\subsection{Approssimazione impulsiva}
-%Lin papaloizou 79
-\begin{wrapfigure}[14]{l}{0.45\textwidth}
-\includegraphics[width=0.4\textwidth]{impulseapprox}\label{fig:impulseapprox}
-\caption{Schema approssimazione impulsiva.}
-\end{wrapfigure}
-
-: at conjuction with planets a fluid element trajectory is deflected in frame centered with planet by angle
-\begin{equation}
-\beta=\arctan{\delta v/v}=\arctan{(\frac{GM_p}{bv_0^2})}
-\end{equation}
-$v_0$ velocit\'a relativa fluido-pianeta; dopo l'interazione l'elemento di fluido \'e in orbita ellittica attorno alla stella
-
-Qual \'e il trasferimento di momento angolare disco-pianeta associato a quest'interazione?
-Trasferimento di momento per unit\'a di massa:
-\begin{align}
-&\Delta u=u(1-\cos{\delta})\approx u\delta^2/2\\
-&\Delta J=au\delta
-\end{align}
-lungo direzione del originale di moto del protopianeta.
-
-Per materia in orbita circolare interna/esterna al pianeta il trasferimento \'e positivo/negativo.
-(The interaction is frictional with interior speeding up protoplanet while exterior slowing down; viscous interaction with disk return mass element in circular orbit)
-Il calcolo esatto che tiene conto del fatto che siamo in SR rotante (LP93) introduce fattore correttivo $K_0=4/9[2K_0(2/3)*K_1(2/3)]^2$.
-
-La velocit\'a relativa \'e $u=a|\Omega_p-\Omega_g$ e dato che l'interazione avviene vicino al pianeta $|\Omega_p-\Omega_g|\approx3/2b\Omega_p/a$.
-
-Rate trasferimento momento angolare tra interno del disco e pianeta
-\begin{equation}
-\TDy{t}{J}=\int_{b_{min}}^{+\infty}a\Sigma\Delta J|\Omega_p-\Omega_g|\,db
-\end{equation}
-
-Per disco esterno all'orbita l'espressione \'e la stessa con segno invertito perch\'e il disco or a \'e pi\'u lento del protopianeta.
-
-Il parametro d'impatto minimo \'e l'assunzione implicita di un gap nel disco a assenza di materia nella regione di corotazione (discussione applicabilein regime non-lineare)
-Formazione gap: perch\'e il gap si stazionario il momento scambiato nell'interazione disco-pianeta deve essere almeno quello trasportato dal moto viscoso del disco:
-\begin{equation}
-\TDy{t}{J}|_{visc}=3\pi\nu\Sigma a^2\omega
-\end{equation}
-deve essere quindi $\TDy{t}{J}|_{visc}<\TDy{t}{J}$
-
-Cut-off: $b_{min}\approx H$, la pressione smorza effetti su scala pi\'u piccola; regime non-lneare, richiesto per gap formation, lunghezza-scala del flusso non minore di $r_H$: predndendo $b_m=2r_h$ si ha
-\begin{equation}
-\frac{M_p}{M_*}>\frac{40\nu}{a^2\omega}
-\end{equation}
-
-Formazione di gap per dischi tipici sopra massa di saturno.
-Migrazione tipo II: il pianeta prende momento dal disco esterno (dovuto al flusso viscoso) e cede quello richiesto al disco esterno dal trasporto viscoso: normalmente il bilancio \'e negativo quindi il pianeta migra verso l'interno.
-
-Quando la massa del pianeta non eccede la massa locale del disco il tempo scale di migrazione \'e
-\begin{equation}
-t_{II}(yr)=\frac{1}{3\alpha}(\frac{a}{H})^2\Omega\expy{-1}=0.05/\alpha(a/H)^2(a/au)\expy{3/2}
-\end{equation}
-per $H/a\approx0.1$, $\alpha=\numrange{e-3}{e-2}$ a $a=1-5 au$ si ha $t_{}=10^3-10^4yr$.
-
-
-\section{Migrazione III:}
 
 \begin{workout}[type III and coorbital torque]
 COnsidero un pianeta migrante: quando il gap \'e parziale materiale percorre l'orbita ed esercita momento t, positive/negative feedback.
