--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -740,14 +740,21 @@ Benitez Llambay 15: heating torque, Paardekooper14 Pierens 15: dynamic corotatio
 
 \section{Migrazione tipo II:pianeti massicci.}
 
+Per pianeti massicci il trasporto viscoso di momento angolare non \'e abbastanza efficiente quindi si forma un gap attorno al pianeta.
+Migrazione tipo II: il pianeta prende momento dal disco esterno (dovuto al flusso viscoso) e cede quello richiesto al disco esterno dal trasporto viscoso: normalmente il bilancio \'e negativo quindi il pianeta migra verso l'interno.
+
 \subsection{Approssimazione impulsiva}
+
 %Lin papaloizou 79
 \begin{wrapfigure}[14]{l}{0.45\textwidth}
 \includegraphics[width=0.45\textwidth]{impulseapprox}\label{fig:impulseapprox}
 \caption{Schema approssimazione impulsiva. Da \cite{crida}.}
 \end{wrapfigure}
 
-In questa approssimazione, cio\'e incontro breve, posso trascurare il moto del pianeta attorno alla stella. La traiettoria di un elemento di fluido \'e deviata di un angolo
+L'approssimazione impulsiva \'e valida per incontri veloci dove la velocit\'a relativa tra elemento di fluido e pianeta \'e maggiore della velocit\'a del suono $c_s$:
+\begin{equation}b_{min}=c_s|\TDy{r}{\Omega}|\expy{-1}=\frac{2}{3}H\end{equation}
+
+In questa approssimazione posso trascurare il moto del pianeta attorno alla stella. La traiettoria di un elemento di fluido \'e deviata di un angolo
 \begin{equation}
 \beta=\arctan{\delta v/v}=\arctan{(\frac{GM_p}{bv_0^2})}
 \end{equation}
@@ -763,45 +770,47 @@ Il disco cede momento angolare al pianeta con rate
 \frac{\delta j}{\delta t}=\frac{\delta j}{2\pi/|\Omega-\Omega_p|}
 \end{equation}
 
-Infine il momento torcente totale esercitato da pianeta sulla porzione esterna di disco \'e
+Infine il momento torcente totale esercitato da pianeta sulla porzione esterna di disco che si estende da $r_p+\Delta$ a infinito \'e
 \begin{equation}
-\Gamma_{imp}==\int_{r_p+\Delta}^{\infty}\int_0^{2\pi}\frac{\delta j}{\delta t}\Sigma r\,d\theta\,dr\propto\Sigma q^2r_p^4\Omega_p^2\frac{r_p^3}{\Delta^3}
+\Gamma_{imp}=\int_{r_p+\Delta}^{\infty}\int_0^{2\pi}\frac{\delta j}{\delta t}\Sigma r\,d\theta\,dr\propto\Sigma q^2r_p^4\Omega_p^2\frac{r_p^3}{\Delta^3}
 \end{equation}
 
 Per materia in orbita circolare interna/esterna al pianeta il trasferimento \'e positivo/negativo: per disco esterno all'orbita l'espressione \'e la stessa con segno invertito perch\'e il disco or a \'e pi\'u lento del protopianeta.
 
-(The interaction is frictional with interior speeding up protoplanet while exterior slowing down; viscous interaction with disk return mass element in circular orbit)
-Il calcolo esatto che tiene conto del fatto che siamo in SR rotante (LP93) introduce fattore correttivo $K_0=4/9[2K_0(2/3)*K_1(2/3)]^2$.
+\subsection{Regime non lineare: }
 
-La velocit\'a relativa \'e $u=a|\Omega_p-\Omega_g$ e dato che l'interazione avviene vicino al pianeta $|\Omega_p-\Omega_g|\approx3/2b\Omega_p/a$.
+%Formazione di gap per dischi tipici sopra massa di saturno.
+%Viscous torque in keplerian disk: $T_{\nu}=3\pi r_0^2\Omega_0\Sigma\vu$.
 
-Rate trasferimento momento angolare tra interno del disco e pianeta
-\begin{equation}
-\TDy{t}{J}=\int_{b_{min}}^{+\infty}a\Sigma\Delta J|\Omega_p-\Omega_g|\,db
-\end{equation}
-
-
-
-Il parametro d'impatto minimo \'e l'assunzione implicita di un gap nel disco a assenza di materia nella regione di corotazione (discussione applicabilein regime non-lineare)
-Formazione gap: perch\'e il gap si stazionario il momento scambiato nell'interazione disco-pianeta deve essere almeno quello trasportato dal moto viscoso del disco:
-\begin{equation}
-\TDy{t}{J}|_{visc}=3\pi\nu\Sigma a^2\omega
-\end{equation}
-deve essere quindi $\TDy{t}{J}|_{visc}<\TDy{t}{J}$
-
-Cut-off: $b_{min}\approx H$, la pressione smorza effetti su scala pi\'u piccola; regime non-lneare, richiesto per gap formation, lunghezza-scala del flusso non minore di $r_H$: predndendo $b_m=2r_h$ si ha
-\begin{equation}
-\frac{M_p}{M_*}>\frac{40\nu}{a^2\omega}
-\end{equation}
-
-Formazione di gap per dischi tipici sopra massa di saturno.
-Migrazione tipo II: il pianeta prende momento dal disco esterno (dovuto al flusso viscoso) e cede quello richiesto al disco esterno dal trasporto viscoso: normalmente il bilancio \'e negativo quindi il pianeta migra verso l'interno.
+\subsection{Tempi caratteristici migrazione tipo II}
 
 Quando la massa del pianeta non eccede la massa locale del disco il tempo scale di migrazione \'e
 \begin{equation}
 t_{II}(yr)=\frac{1}{3\alpha}(\frac{a}{H})^2\Omega\expy{-1}=0.05/\alpha(a/H)^2(a/au)\expy{3/2}
 \end{equation}
 per $H/a\approx0.1$, $\alpha=\numrange{e-3}{e-2}$ a $a=1-5 au$ si ha $t_{}=10^3-10^4yr$.
+
+
+
+\begin{workout}[approx impulsiva e regime non lineare]
+(The interaction is frictional with interior speeding up protoplanet while exterior slowing down; viscous interaction with disk return mass element in circular orbit)
+Il calcolo esatto che tiene conto del fatto che siamo in SR rotante (LP93) introduce fattore correttivo $K_0=4/9[2K_0(2/3)*K_1(2/3)]^2$.
+La velocit\'a relativa \'e $u=a|\Omega_p-\Omega_g$ e dato che l'interazione avviene vicino al pianeta $|\Omega_p-\Omega_g|\approx3/2b\Omega_p/a$.
+Rate trasferimento momento angolare tra interno del disco e pianeta
+\begin{equation}
+\TDy{t}{J}=\int_{b_{min}}^{+\infty}a\Sigma\Delta J|\Omega_p-\Omega_g|\,db
+\end{equation}
+Il parametro d'impatto minimo \'e l'assunzione implicita di un gap nel disco a assenza di materia nella regione di corotazione (discussione applicabilein regime non-lineare)
+Formazione gap: perch\'e il gap si stazionario il momento scambiato nell'interazione disco-pianeta deve essere almeno quello trasportato dal moto viscoso del disco:
+\begin{equation}
+\TDy{t}{J}|_{visc}=3\pi\nu\Sigma a^2\omega
+\end{equation}
+deve essere quindi $\TDy{t}{J}|_{visc}<\TDy{t}{J}$
+Cut-off: $b_{min}\approx H$, la pressione smorza effetti su scala pi\'u piccola; regime non-lneare, richiesto per gap formation, lunghezza-scala del flusso non minore di $r_H$: predndendo $b_m=2r_h$ si ha
+\begin{equation}
+\frac{M_p}{M_*}>\frac{40\nu}{a^2\omega}
+\end{equation}
+\end{workout}
 
 
 \section{Migrazione III:}
