--- a/seminario.bib
+++ b/seminario.bib
@@ -128,6 +128,17 @@ pages={1282},
   publisher={IOP Publishing}
 }
 
+@article{masset2007planetary,
+  title={Planetary migration in gaseous protoplanetary disks},
+  author={Masset, Fr{\'e}d{\'e}ric S},
+  journal={Proceedings of the International Astronomical Union},
+  volume={3},
+  number={S249},
+  pages={331--346},
+  year={2007},
+  publisher={Cambridge University Press}
+}
+
 @article{armitage2007lecture,
   title={Lecture notes on the formation and early evolution of planetary systems},
   author={Armitage, Philip J},
