migration I/III: corotation, gap opening

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -74,6 +74,21 @@ auto gravitazione trascurabile quindi la struttura verticale \'e determinata dal
 \TDy{z}{P}=-rho g_z=-\frac{GM_*}{r^2+z^2}sin{\theta}\rho=-\Omega^2z
 \end{equation}
 
+\begin{workout}[Momento torcente in disco Kepleriano]
+\begin{align}
+&\sigma_{ij}=2\Sigma\nu D_{ij}=\Sigma\nu\begin{pmatrix}0&-\Omega\partial_r(r\Omega)\\-\Omega+\partial_r(r\Omega)&0
+\end{pmatrix}\\
+\end{align}
+Il momento torcente esercitato da S su $C^c$ \'e
+\begin{equation}
+T=\iint_{S^c}(\vec{r}\wedge\nabla\sigma)\,ds=\int_S\vec{r}\wedge(\sigmadl\vec{n})
+\end{equation}
+Nel caso S sia circonferenza di raggio r:
+\begin{equation}
+T_{\nu}=3\pi r^2\Omega_0\Sigma\nu
+\end{equation}
+\end{workout}
+
 \begin{workout}[Passive disks]
 (Refs: Ref: spectral energy distribution of T-Tauri star with passive circumstellar disk)
 Dust passively reirradiate star light
@@ -560,7 +575,16 @@ fonti energia: tidal heating radiogeninc heat, star flux
 \chapter{Interazioni pianeta-disco: migrazione planetaria}
 }
 
+\begin{wrapfigure}[10]{lr}{0.5\textwidth}
+\includegraphics[trim={0cm 0 0 0},clip, width=0.45\textwidth]{corotation}\label{fig:corotation}
+\caption{Da \cite{armitage2007lecture}.}
+\end{wrapfigure}
+
 Considero in maniera schematica lo scambio di momento angolare tra pianeta e disco usando l'approssimazione impulsiva, dove si considera la traiettora di un elemento di fluido che interagisce col pianeta e integrando sui parametri d'impatto ammissibili, oppure descrivendo in approssimazione lineare l'interazione tra onde di densit\'a e pianeta.
+
+\begin{workout}[Migrazione: situazione complessa]
+Armitage07 pg 57-58
+\end{workout}
 
 \begin{workout}[Migration refs]
 Terquem papaloizou (planet formation and migration) pg 43
@@ -683,27 +707,32 @@ Inoltre le risonanze rimangono a distanza finita dal pianeta:
 %dove $\xi=\frac{mc_s}{\Omega r}$, $c_s=H\Omega$.
 
 \subsection{Momento torcente dovuto alle risonanze di Lindblad}
-
-
 Il momento torcente esercitato dal disco sul pianeta \'e
 \begin{equation}
 \Gamma_t=-\int_{disk}\Sigma(\vecp{r}{F})\,df=\int_{disk}\Sigma(\vec{r}\wedge\nabla\psi_p)\,df=\int_{disk}\Sigma\PDy{\phi}{\psi_p}\,df\label{eq:pd-torque}
 \end{equation}
 $\Sigma$ densit\'a superficiale,  $\vec{F}$ forza per unit\'a di massa, $df$ elemento di superficie.
-
-
 %Linear. Occur if $R_H$ is smaller then H, disk scale heigth, and if viscous torque are dominant compared to gravitational torque.
-
 (Integrando l'equazione \eqref{eq:pd-torque} si ottiene) L'espressione del momento torcente esterno/interno
 \begin{equation}
 %\Gamma_m^L=\left.\sign{(\Omega-\Omega_p)}\frac{\pi^2\Sigma}{3\Omega\Omega_p}(r\TDy{r}{\psi_m}+\frac{2m^2(\Omega-\Omega_p)}{\Omega}\psi_m)^2\right|_{r=r_L}
 \Gamma_L\propto\sign{(r-r_p)}q^2\Sigma r^4\Omega^2(\frac{r}{H})^3
-\end{equation}
+\end{equation}\label{eq:torqueimp}
 con $q=M_p/M_*$, infine una stima del momento torcente differenziale delle risonanze di Lindblad \'e fornito da \cite{tanaka2002three}:
 \begin{equation}
 \Gamma_L^d\propto q^2\Sigma r_p^4\Omega_p^2(\frac{H}{r})\expy{-2}
 \end{equation}
 per disco isotermo infinitamente sottile.
+
+\subsection{Momento torcente dovuto alle risonanze di Corotazione}
+
+Il momento torcente dovuto alle risonanze di corotazione \'e
+\begin{equation}
+\Gamma_C^m\propto m[\frac{\psi_m}{\TDy{r}{\Omega}}\TDof{r}(\frac{\Sigma}{B})]_{r_c}
+\end{equation}
+dove $\psi_m$ \'e la m-esima componente del potenziale e $2B$ la vorticit\'a del flusso; la regione di corotazione \'e divisa in m isole di librazione.
+Il gradiente di $\Sigma/B$ va rapidamente a zero se non mantenuto da adeguata viscosit\'a.
+%$\nabla\wedge\vec{r}=vorticit\'a$
 
 \subsection{Velocit\'a migrazione tipo I}
 
@@ -772,15 +801,27 @@ Il disco cede momento angolare al pianeta con rate
 
 Infine il momento torcente totale esercitato da pianeta sulla porzione esterna di disco che si estende da $r_p+\Delta$ a infinito \'e
 \begin{equation}
-\Gamma_{imp}=\int_{r_p+\Delta}^{\infty}\int_0^{2\pi}\frac{\delta j}{\delta t}\Sigma r\,d\theta\,dr\propto\Sigma q^2r_p^4\Omega_p^2\frac{r_p^3}{\Delta^3}
+\Gamma_{imp}=\int_{r_p+\Delta}^{\infty}\int_0^{2\pi}\frac{\delta j}{\delta t}\Sigma r\,d\theta\,dr\propto\Sigma q^2r_p^4\Omega_p^2\frac{r_p^3}{\Delta^3}\label{eq:torqueimp}
 \end{equation}
 
 Per materia in orbita circolare interna/esterna al pianeta il trasferimento \'e positivo/negativo: per disco esterno all'orbita l'espressione \'e la stessa con segno invertito perch\'e il disco or a \'e pi\'u lento del protopianeta.
 
-\subsection{Regime non lineare: }
-
+\subsection{Regime non lineare: fromazione di gap attorno al pianeta}
 %Formazione di gap per dischi tipici sopra massa di saturno.
 %Viscous torque in keplerian disk: $T_{\nu}=3\pi r_0^2\Omega_0\Sigma\vu$.
+
+Il limite del regime lineare  \'e raggiunto quando il momento torcente dovuto al potenziale del pianeta \'e pari a quell odovuto alla viscosit\'a del disco:
+\begin{equation}
+\Gamma_g(\Delta)+\Gamma_{\nu}(r_p+\Delta)=0
+\end{equation}
+con $\Gamma_g$ dato da \eqref{eq:torqueimp} o \eqref{eq:torqueimp} dove si era usata la distanza minima $\Delta=\frac{2}{3}H$.
+
+Le condizioni necessarie per apertura gap sono (\cite{papaloizoulin1984})
+\begin{align}
+&R_H>H\\
+&\frac{\nu}{r_p^2\Omega_p}<0.0887q^2(\frac{r_p}{H})^3
+\end{align}
+la prima impone che influenza gravitazionale del pianeta sia maggiore dell'altezza caratteristica del disco, la seconda che $\Gamma_g>\Gamma_{\nu}$.
 
 \subsection{Tempi caratteristici migrazione tipo II}
 
@@ -813,7 +854,9 @@ Cut-off: $b_{min}\approx H$, la pressione smorza effetti su scala pi\'u piccola;
 \end{workout}
 
 
-\section{Migrazione III:}
+\section{Migrazione III: }
+
+Esistono condizioni per cui il momento torcente generato nella zona di corotazione pu\'o diventare dominante.
 
 \subsection{Momento torcente generato nella regione di corotazione}
 
@@ -822,15 +865,14 @@ paardekooper papaloizou 09: '' On corotation torque, horseshoe drag and the poss
 masset 06: ''On the migration of protogiant solid cores''
 \end{workout}
 
-\begin{wrapfigure}[10]{lr}{0.5\textwidth}
-\includegraphics[trim={0cm 0 0 0},clip, width=0.45\textwidth]{corotation}\label{fig:corotation}
-\caption{Da \cite{armitage2007lecture}.}
-\end{wrapfigure}
+Il momento torcente dovuto al flusso di materia causato dalla migrazione \'e
+\begin{equation}
+\Gamma_{III}=2\pi\Sigma_s\dot{a}_p\Omega_pa_p^3x_s
+\end{equation}
 
-La regione di corotazione \'e definita da $\Omega(r)-\Omega_p=0$ cio\'e il potenziale del pianeta ruota alla stessa frequenza del fluido; utilizzando l'approssimazione impulsi nel regime di piccolo parametro d'impatto e bassa velocit\'a relativa si determina il valorelimite $x_s$ per cui se $x_s<b$ la particella di fluido compie un orbita a ferro di cavallo (\ref{fig:corotation}). 
-low mass $q<\num{e-4.5}$: $x_s\propto m_p^2$, for massive planets $q>\num{e-4}$: $x_s\propto R_H$.
+La regione di corotazione \'e definita da $\Omega(r)-\Omega_p=0$ cio\'e il potenziale del pianeta ruota alla stessa frequenza del fluido; utilizzando l'approssimazione impulsi nel regime di piccolo parametro d'impatto e bassa velocit\'a relativa si determina il valorelimite $x_s$ per cui se $x_s<b$ la particella di fluido compie un orbita a ferro di cavallo (\ref{fig:corotation}). Per pianeti di piccola massa $q<\num{e-4.5}$: $x_s\propto m_p^2$, mentre per pianeti massivi $q>\num{e-4}$: $x_s\propto R_H$.
 
-
+\begin{workout}[corotation torque from ''disk planet interction'']
 The torque excerted by all fluid elements is (Goldreich tremaine79, Ward 91,92)
 \begin{equation}
 T_C3/4x_s^4\Omega_p^2\Sigma\TDly{r}{\Sigma/B}
@@ -844,6 +886,7 @@ infine il momento torcente totale \'e
 \begin{equation}T_I=\sum_{m}^{int}\Gamma_m^L+\sum_{m}^{out}\Gamma_m^L+\sum_{m}\Gamma_m^C\end{equation}
 
 Corotation torque saturation depends upon $\tau_{nlib}/\tau_{vis}$: over timescale long rel. to librration time angular momentum exchanged between planet-disk average to zero.
+\end{workout}
 
 \subsection{Corotation torque in accretion disk and migration 3 type}
 Viscosity desaturate,
@@ -874,6 +917,8 @@ Flow-through corotation torque: $\Gamma_{flow}=2\pi\Sigma_s\dot{a}_p\Omega_pa_p^
 \begin{align*}
 &\dot{a}_p=\frac{2\Gamma^L}{\Omega_pa_p(m_p’-\delta m)}
 \end{align*}
+
+\section{Evoluzione elementi orbitali durante migrazione}
 
 \begin{workout}[Eccentricity and inclination evolution]
 Planet-disk interactions: normal, tangential, radial forces. eccentricity and inclination evolution. (‘’Planet-disk interactions and orbital evolution’’)
